--- a/style.css
+++ b/style.css
@@ -331,6 +331,35 @@
       margin: 0;
     }
   }
+
+  .dis {
+    display: flex;
+   }
+   .disimg {
+     float: left; margin-right: 12px; margin-bottom: 12px;
+     position: relative;
+     background-clip: padding-box;
+     border: 10px solid transparent;
+     background-color: #191a28;
+     border-radius: 20px;
+   }
+   .disimg:before {
+     content: "";
+     position: absolute;
+     inset: 0;
+     z-index: -1;
+     margin: -7px;
+     background-image: linear-gradient(to right top, #7e4fff, #ff5eea);
+     border-radius: inherit;
+   }
+   
+   .disimg img {
+   margin-bottom: 6px; display: block; border-radius: 15px; max-width: 100%; height: auto;
+   }
+   .command { background-color: #ffe0fb; border-left: 6px solid #ccc;  padding: 0.01em 16px; border-color: #dd1cff; }
+   .command p {
+   color:black;
+   }
   
   /* Large screens */
   @media only screen and (min-width: 600px) {
